hphp/hack/test/typecheck/async_function_untyped5.php.exp
File "async_function_untyped5.php", line 8, characters 19-19:
Member f has the wrong type (Typing[4341])
File "async_function_untyped5.php", line 4, characters 25-25:
Expected Awaitable<_> (result of 'async function')
File "async_function_untyped5.php", line 8, characters 24-26:
But got int
